--- a/src/views/links/det_saldos.hbs
+++ b/src/views/links/det_saldos.hbs
@@ -62,20 +62,20 @@
 <div>
      
     {{#each lnsaldo}}
-  
-                    <div class="row">
-
-                        <div class="col bg-dark text-white p-4">
+        <div class="container">
+                    <div class="row" >
+                        <div class="col bg-dark"></div>         
+                        <div class="col-md-auto bg-dark text-white">
                             <h3>Total General:</h3> 
                         </div>
 
-                        <div class="col-auto bg-dark text-white p-4">
+                        <div class="col col-lg-2 bg-dark text-white">
                             <h3> {{saldo}}</h3>
                            
                         </div>
 
                     </div>
- 
+        </div>
              
     {{/each}}
  
