--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -4,12 +4,12 @@
             <div class="card text-center">
             
                 <div class="card-header text-left text-white bg-primary">
-                   <span> <img src="/img/tasser1.ico" alt=""> Login </span> 
+                   <span> <img src="/img/tasser1.ico" alt=""> login </span> 
                 </div>         
 <!--
                 <div class="card-header fas fa-user text-left">
                     <i class="fas fa-user"></i>  
-                    Login              
+                    login              
                 </div> 
                   -->
 
