--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -2,7 +2,7 @@
 
   <div class="container">
     {{#if user}}
-      <a class="navbar-brand" href="/list">{{user.NOMBRE}} </a>
+      <a class="navbar-brand" href="/list">{{user.nombre}} </a>
     {{else}}
       <!--<a class="navbar-brand" href="/">Inicio </a> -->
       Inicio
