inhabilitar handlebars-intl

--- a/src/views/links/det_saldos.hbs
+++ b/src/views/links/det_saldos.hbs
@@ -27,8 +27,8 @@
                         {{ nombre }}
                     </td>
                     <td>
-                        <!--<p class="m-2">{{ fecha }}</p> -->
-                        <p>{{formatDate fecha day="numeric" month="numeric" year="numeric"}}</p> 
+                       <p class="m-2">{{ fecha }}</p>
+                       
                        
                     </td>
                     <td>
